allows containerization of a multi-module application without need for a powershell script